--- a/web/angular-wallet/src/locales/cs.json
+++ b/web/angular-wallet/src/locales/cs.json
@@ -49,6 +49,7 @@
   "all_blocks": "Všechny bloky",
   "all_transactions": "Všechny transakce",
   "amount": "Částka",
+  "amount_nqt": "Množství",
   "amount_plus_fee": "Částka + Poplatek",
   "and_logout": "a odhlásit se",
   "animate_forging_indicator": "Obnovit indikátor forgingu",
@@ -96,6 +97,8 @@
   "block": "Blok",
   "block_details": "Detaily bloku",
   "block_generation_time": "Doba generování bloku",
+  "block_height": "Výška bloku",
+  "block_id": "ID bloku",
   "block_signature": "Podpis bloku",
   "block_timestamp": "Časové razítko bloku",
   "blocks": "Bloky",
@@ -224,6 +227,8 @@
   "downloading_blockchain": "Stahuji blockchain",
   "downloading_update": "Probíhá stahování aktualizace. Jakmile budete hotovi, budete informováni.",
   "drop_update": "Drop client update (zip file) here when downloaded or click to select.",
+  "ec_block_height": "Výška bloku EC",
+  "ec_block_id": "ID bloku EC",
   "edit": "Upravit",
   "effective_balance": "Efektivní zůstatek",
   "email_address": "Emailová adresa",
@@ -441,6 +446,7 @@
   "export_contact": "Exportovat kontakty",
   "failed": "Nepodařilo se",
   "fee": "Poplatek",
+  "fee_nqt": "Poplatek",
   "feedback": "Zpětná vazba",
   "feedback_given": "Poskztnuta zpětná vazba",
   "feedback_note": "Zpětná vazba",
@@ -717,7 +723,9 @@
   "recent_transactions_since": "Nedávné transakce od roku 2003",
   "recipient": "Příjemce",
   "recipient_account": "Účet příjemce",
+  "recipient_address": "Adresa příjemce",
   "recipient_alias_suggestion": "If you want to type an alias, prepend it with the @ character.",
+  "recipient_id": "ID příjemce",
   "recipient_info": "The recipient account has a public key and a balance of __burst__ BURST.",
   "recipient_malformed": "The recipient account is malformed, please adjust.",
   "recipient_malformed_suggestion": "Adresa příjemců je nesprávná, měli jste na mysli __recipient__?",
@@ -750,6 +758,7 @@
   "remove_from_group": "Odstranit ze skupiny",
   "repeat": "Znovu",
   "request_burst": "Request BURST",
+  "request_processing_time": "Doba zpracování požadavku",
   "returning_user_q": "Stávající uživatel?",
   "reward_recipient": "Příjemce odměny",
   "same_out": "Same Amount",
@@ -783,6 +792,8 @@
   "send_message_button": "Odeslat zprávu",
   "send_message_to_sender": "Odeslat zprávu odesílateli",
   "sender": "Odesilatel",
+  "sender_address": "Adresa odesílatele",
+  "sender_id": "ID odesílatele",
   "sender_public_key": "Veřejný klíč odesilatele",
   "server_error_unknown": "Došlo k neznámé chybě.",
   "set_account_info": "Nastavení účtu",
@@ -790,6 +801,7 @@
   "settings": "Nastavení",
   "share_address": "Sdílet adresu",
   "show_console_log_button": "Zobrazit tlačítko logovací konzole",
+  "signature": "Podpis",
   "signature_hash": "Hash podpisu",
   "signed_transaction_bytes": "Počet bajtů podepsané transakce",
   "smart_contract": "Inteligentní smlouva",
@@ -855,6 +867,7 @@
   "success_group_name_update": "Jméno skupiny bylo úspěšně aktualizováno.",
   "success_hash_verification": "Stažená verze byla ověřena, hash je správný. Můžete pokračovat v instalaci.",
   "success_issue_asset": "Aktivum bylo vytvořeno a brzy bude k dispozici.",
+  "success_lease_balance": "Váš zůstatek bude pronajat v 1440 blocích.",
   "success_message_sent": "Vaše zpráva byla odeslána.",
   "success_messages_decrypt": "Zpráva byla úspěšně dešifrována/Zprávy byly úspěšně dešifrovány.",
   "success_passphrase_confirmed": "Heslo bylo úspěšně potvrzeno, nyní jste přihlášen(a).",
