--- a/web/angular-wallet/src/locales/el.json
+++ b/web/angular-wallet/src/locales/el.json
@@ -49,6 +49,7 @@
   "all_blocks": "Όλα τα μπλοκ",
   "all_transactions": "Όλες οι συναλλαγές",
   "amount": "Ποσό",
+  "amount_nqt": "Ποσό",
   "amount_plus_fee": "Ποσό + προμήθεια",
   "and_logout": "και αποσύνδεση",
   "animate_forging_indicator": "ενεργοποίηση δείκτη Forging",
@@ -96,6 +97,8 @@
   "block": "Μπλοκ",
   "block_details": "λεπτομέρειες Μπλοκ",
   "block_generation_time": "χρόνος δημιουργίας Μπλοκ",
+  "block_height": "Ύψος μπλοκ",
+  "block_id": "Αναγνωριστικό μπλοκ",
   "block_signature": "Block Signature",
   "block_timestamp": "Block Timestamp",
   "blocks": "Μπλοκ",
@@ -224,6 +227,8 @@
   "downloading_blockchain": "λήψη Blockchain",
   "downloading_update": "Η ενημέρωση γίνεται λήψη. Θα ενημερωθείτε μόλις ολοκληρωθεί.",
   "drop_update": "Drop client update (zip file) here when downloaded or click to select.",
+  "ec_block_height": "Ύψος μπλοκ ΕΚ",
+  "ec_block_id": "Αναγνωριστικό δέσμης EC",
   "edit": "Επεξεργασία",
   "effective_balance": "διαθέσιμο ποσό",
   "email_address": "Διεύθυνση Email",
@@ -441,6 +446,7 @@
   "export_contact": "Εξαγωγή επαφών",
   "failed": "απέτυχε",
   "fee": "Προμήθεια",
+  "fee_nqt": "Τέλη",
   "feedback": "Απάντηση / Αξιολόγηση",
   "feedback_given": "Aνταπόκριση εστάλθηκε",
   "feedback_note": "Feedback Note",
@@ -717,7 +723,9 @@
   "recent_transactions_since": "Πρόσφατες συναλλαγές από τότε",
   "recipient": "Παραλήπτης",
   "recipient_account": "Recipient Account",
+  "recipient_address": "Διεύθυνση παραλήπτη",
   "recipient_alias_suggestion": "If you want to type an alias, prepend it with the @ character.",
+  "recipient_id": "Αναγνωριστικό παραλήπτη",
   "recipient_info": "Ο λογαριασμός του παραλήπτη έχει δημόσιο κλειδί και το υπόλοιπό του ανέρχεται σε __burst__ burst.",
   "recipient_malformed": "Λογαριασμός του δικαιούχου είναι λανθασμένος, παρακαλούμε να το διορθώστε.",
   "recipient_malformed_suggestion": "Η διεύθυνση του παραλήπτη είναι λανθασμένη, μήπως εννοείτε __recipient__;",
@@ -750,6 +758,7 @@
   "remove_from_group": "Remove From Group",
   "repeat": "Επανάληψη",
   "request_burst": "Request BURST",
+  "request_processing_time": "Ζήτηση χρόνου επεξεργασίας",
   "returning_user_q": "Επιστροφή χρήστη;",
   "reward_recipient": "Ανταμοιβή παραλήπτη",
   "same_out": "Same Amount",
@@ -783,6 +792,8 @@
   "send_message_button": "Αποστολή μηνύματος",
   "send_message_to_sender": "Στείλτε μήνυμα στον αποστολέα",
   "sender": "Αποστολέας",
+  "sender_address": "Διεύθυνση αποστολέα",
+  "sender_id": "ταυτότητα αποστολέα",
   "sender_public_key": "Δημόσιο κλειδί αποστολέα",
   "server_error_unknown": "Παρουσιάστηκε ένα άγνωστο σφάλμα.",
   "set_account_info": "Θέτω πληροφορίες λογαριασμού",
@@ -790,6 +801,7 @@
   "settings": "Ρυθμίσεις",
   "share_address": "Μοιραστείτε τη διεύθυνση",
   "show_console_log_button": "Show Console Log Button",
+  "signature": "Υπογραφή",
   "signature_hash": "Signature Hash",
   "signed_transaction_bytes": "Signed Transaction Bytes",
   "smart_contract": "Έξυπνη σύμβαση",
@@ -855,6 +867,7 @@
   "success_group_name_update": "Το όνομα της ομάδας ενημερώθηκε με επιτυχία.",
   "success_hash_verification": "The downloaded version has been verified, the hash is correct. You may proceed with the installation.",
   "success_issue_asset": "Η μετοχή έχει καταγραφεί και θα είναι διαθέσιμη σύντομα.",
+  "success_lease_balance": "Το υπόλοιπό σας θα εκμισθωθεί σε 1440 τετράγωνα.",
   "success_message_sent": "Το μήνυμά σας έχει σταλεί.",
   "success_messages_decrypt": "Τα μηνύματα αποκρυπτογραφήθηκαν με επιτυχία.",
   "success_passphrase_confirmed": "Passphrase confirmed successfully, you are now logged in.",
