--- a/web/angular-wallet/src/locales/fi.json
+++ b/web/angular-wallet/src/locales/fi.json
@@ -49,6 +49,7 @@
   "all_blocks": "Kaikki lohkot",
   "all_transactions": "Kaikki tapahtumat",
   "amount": "Summa",
+  "amount_nqt": "Määrä",
   "amount_plus_fee": "Summa + siirtomaksu",
   "and_logout": "ja kirjaudu ulos",
   "animate_forging_indicator": "Takominen animaatiolla",
@@ -96,6 +97,8 @@
   "block": "Lohko",
   "block_details": "Lohkon tiedot",
   "block_generation_time": "Lohkon luontiaika",
+  "block_height": "Estä korkeus",
+  "block_id": "Estä tunnus",
   "block_signature": "Lohkon allekirjoitus",
   "block_timestamp": "Lohkon aikaleima",
   "blocks": "Lohkot",
@@ -224,6 +227,8 @@
   "downloading_blockchain": "Ladataan lohkoketjua",
   "downloading_update": "Päivitys ladataan. Sinulle ilmoitetaan, kun se on valmis.",
   "drop_update": "Tiputa ohjelman päivitystiedosto (zip) tähän kun se on ladattu, tai klikkaa valitaksesi se.",
+  "ec_block_height": "EC Block Height",
+  "ec_block_id": "EC Block ID",
   "edit": "Muokkaa",
   "effective_balance": "Efektiivinen saldo",
   "email_address": "Sähköpostiosoite",
@@ -441,6 +446,7 @@
   "export_contact": "Export Contacts",
   "failed": "Epäonnistui",
   "fee": "Siirtomaksu",
+  "fee_nqt": "Maksu",
   "feedback": "Palaute",
   "feedback_given": "Annettu palaute",
   "feedback_note": "Palautteen viesti",
@@ -717,7 +723,9 @@
   "recent_transactions_since": "Viimeaikaiset tapahtumat vuodesta 2004 lähtien",
   "recipient": "Vastaanottaja",
   "recipient_account": "Vastaanottajan tili",
+  "recipient_address": "Vastaanottajan osoite",
   "recipient_alias_suggestion": "Jos haluat kirjoittaa aliaksen, laita sen eteen @-merkki.",
+  "recipient_id": "Vastaanottajan tunnus",
   "recipient_info": "Vastaanottavalla tilillä on julkinen avain ja tilin saldo on __burst__ BURST.",
   "recipient_malformed": "Vastaanottajan tilinumero on virheellinen. Korjaa se.",
   "recipient_malformed_suggestion": "Vastaanottajan osoite on virheellinen, tarkoititko __recipient__?",
@@ -750,6 +758,7 @@
   "remove_from_group": "Poista ryhmästä",
   "repeat": "Toista",
   "request_burst": "Request BURST",
+  "request_processing_time": "Pyydä käsittelyaikaa",
   "returning_user_q": "Vanha käyttäjä?",
   "reward_recipient": "Palkinnon saaja",
   "same_out": "Same Amount",
@@ -783,6 +792,8 @@
   "send_message_button": "Lähetä viesti",
   "send_message_to_sender": "Send Message to Sender",
   "sender": "Lähettäjä",
+  "sender_address": "Lähettäjän osoite",
+  "sender_id": "lähettäjän ID",
   "sender_public_key": "Lähettäjän julkinen avain",
   "server_error_unknown": "Tuntematon virhe.",
   "set_account_info": "Määritä tilin tiedot",
@@ -790,6 +801,7 @@
   "settings": "Asetukset",
   "share_address": "Jaa tilinumero",
   "show_console_log_button": "Näytä Konsoli Loki-painike",
+  "signature": "Allekirjoitus",
   "signature_hash": "Allekirjoituksen tarkiste",
   "signed_transaction_bytes": "Allekirjoitetun tapahtumat tavut",
   "smart_contract": "Älykäs sopimus",
@@ -855,6 +867,7 @@
   "success_group_name_update": "Ryhmän nimi päivitettiin onnistuneesti.",
   "success_hash_verification": "Ladattu tiedosto on tarkastettu. Voit jatkaa asennusta.",
   "success_issue_asset": "Arvopaperi on luotu ja on saatavilla pian.",
+  "success_lease_balance": "Sinun saldosi vuokrataan 1440 korttelissa.",
   "success_message_sent": "Viesti on lähetetty.",
   "success_messages_decrypt": "Viesti(e)n salaus purettu.",
   "success_passphrase_confirmed": "Tunnuslause vahvistettu, olet nyt kirjautunut sisään.",
