--- a/web/angular-wallet/src/locales/ro.json
+++ b/web/angular-wallet/src/locales/ro.json
@@ -49,6 +49,7 @@
   "all_blocks": "Toate blocurile",
   "all_transactions": "Toate Tranzacţiile",
   "amount": "Cantitate",
+  "amount_nqt": "Cantitate",
   "amount_plus_fee": "Cantitate + taxă",
   "and_logout": "şi Delogare",
   "animate_forging_indicator": "Indicator de forjare animat",
@@ -96,6 +97,8 @@
   "block": "Bloc",
   "block_details": "Detalii Bloc",
   "block_generation_time": "Timp Generare Bloc",
+  "block_height": "Inaltimea blocului",
+  "block_id": "Identitatea blocului",
   "block_signature": "Semnătură Bloc",
   "block_timestamp": "Marcaj dată/oră Bloc",
   "blocks": "Blocuri",
@@ -224,6 +227,8 @@
   "downloading_blockchain": "Descărcare Blockchain",
   "downloading_update": "Actualizarea este descărcată. Veți fi informat după ce ați terminat.",
   "drop_update": "Glisează actualizarea clientului (fişier zip) aici când este descărcat sau fă clic pentru a selecta.",
+  "ec_block_height": "Înălțimea blocului CE",
+  "ec_block_id": "Codul blocului CE",
   "edit": "Editare",
   "effective_balance": "Sold Efectiv",
   "email_address": "Adresă de Email",
@@ -441,6 +446,7 @@
   "export_contact": "Exportă Contacte",
   "failed": "Eşuat",
   "fee": "Taxă",
+  "fee_nqt": "taxă",
   "feedback": "Comentarii",
   "feedback_given": "Feedback-ul trimis",
   "feedback_note": "Notiță Feedback",
@@ -717,7 +723,9 @@
   "recent_transactions_since": "Tranzacții recente de la",
   "recipient": "Destinatar",
   "recipient_account": "Cont destinatar",
+  "recipient_address": "Adresa destinatarului",
   "recipient_alias_suggestion": "Dacă dorești să introduci un alias, precedează-l cu caracterul @.",
+  "recipient_id": "ID-ul destinatarului",
   "recipient_info": "Contul destinatarului are o cheie publică şi un sold de __burst__ burst.",
   "recipient_malformed": "Contul destinatarului este incorect, te rugăm să-l reintroduci.",
   "recipient_malformed_suggestion": "Adresa destinatarului pare deformată, ai vrut să spui __recipient__?",
@@ -750,6 +758,7 @@
   "remove_from_group": "Elimină din grup",
   "repeat": "Repetă",
   "request_burst": "Request BURST",
+  "request_processing_time": "Cereți timpul de procesare",
   "returning_user_q": "Deja înregistrat?",
   "reward_recipient": "Recipient Recompensă",
   "same_out": "Same Amount",
@@ -783,6 +792,8 @@
   "send_message_button": "Trimite Mesaj",
   "send_message_to_sender": "Trimite Mesaj pentru Expeditor",
   "sender": "Expeditor",
+  "sender_address": "Adresa expeditorului",
+  "sender_id": "ID-ul expeditorului",
   "sender_public_key": "Cheia Publică Expeditor",
   "server_error_unknown": "S-a produs o eroare necunoscută.",
   "set_account_info": "Setaţi informațiile contului",
@@ -790,6 +801,7 @@
   "settings": "Setări",
   "share_address": "Partajează Adresa",
   "show_console_log_button": "Arată butonul de logare al consolei",
+  "signature": "Semnătură",
   "signature_hash": "Hash-ul Semnăturii",
   "signed_transaction_bytes": "Bytes-ii tranzacției semnalate",
   "smart_contract": "Contractul inteligent",
@@ -855,6 +867,7 @@
   "success_group_name_update": "Nume grup actualizat cu succes.",
   "success_hash_verification": "Versiunea descărcată a fost verificată, hash-ul este corect. Poți continua cu instalarea.",
   "success_issue_asset": "Activa a fost creată şi va fi disponibilă în curând.",
+  "success_lease_balance": "Soldul dvs. va fi închiriat în 1440 blocuri.",
   "success_message_sent": "Mesajul a fost trimis.",
   "success_messages_decrypt": "Mesaj(e) decriptat(e) cu succes.",
   "success_passphrase_confirmed": "Parola de acces confirmată cu succes, acum esti logat.",
