--- a/web/angular-wallet/src/locales/sh.json
+++ b/web/angular-wallet/src/locales/sh.json
@@ -49,6 +49,7 @@
   "all_blocks": "Svi blokovi",
   "all_transactions": "Sve transakcije",
   "amount": "Iznos",
+  "amount_nqt": "Iznos",
   "amount_plus_fee": "Iznos + provizija",
   "and_logout": "i odjavite se",
   "animate_forging_indicator": "Animirajte indikator kovanja",
@@ -96,6 +97,8 @@
   "block": "Blok",
   "block_details": "Detalji bloka",
   "block_generation_time": "Vrijeme generiranja bloka",
+  "block_height": "Block Height",
+  "block_id": "ID bloka",
   "block_signature": "Potpis bloka",
   "block_timestamp": "Oznaka vremena bloka",
   "blocks": "Blokovi",
@@ -224,6 +227,8 @@
   "downloading_blockchain": "Preuzimanje blockchaina",
   "downloading_update": "Ažuriranje se preuzima. Bićeš obavešten kada završi.",
   "drop_update": "Nakon preuzimanje spustite ažurirani klijent (zip datoteku) ovdje ili kliknite za odabir.",
+  "ec_block_height": "EC Block Height",
+  "ec_block_id": "EC Block ID",
   "edit": "Uredi",
   "effective_balance": "Efektivni saldo",
   "email_address": "Email adresa",
@@ -441,6 +446,7 @@
   "export_contact": "Export Contacts",
   "failed": "Neuspjeh",
   "fee": "Provizija",
+  "fee_nqt": "Fee",
   "feedback": "Povratna informacija",
   "feedback_given": "Povratna informacija ostavljena",
   "feedback_note": "Poruka povratne informacije",
@@ -717,7 +723,9 @@
   "recent_transactions_since": "Nedavne transakcije od",
   "recipient": "Primatelj",
   "recipient_account": "Račun primalaca",
+  "recipient_address": "Adresa primatelja",
   "recipient_alias_suggestion": "Ako želite unijeti pseudonim ispred (pseudonima) koristite @ znak.",
+  "recipient_id": "ID primatelja",
   "recipient_info": "Račun primaoca posjeduje javni ključ i saldo od __burst__ burst.",
   "recipient_malformed": "Račun primatelja je pogrešan, molimo ispravite unos.",
   "recipient_malformed_suggestion": "Adresa primatelja je izobličena, jeste li mislili __recipient__ ?",
@@ -750,6 +758,7 @@
   "remove_from_group": "Ukloni iz grupe",
   "repeat": "Ponovite",
   "request_burst": "Request BURST",
+  "request_processing_time": "Zahtjev za obradu vremena",
   "returning_user_q": "Korisnik povratnik?",
   "reward_recipient": "Reward Recipient",
   "same_out": "Same Amount",
@@ -783,6 +792,8 @@
   "send_message_button": "Pošaljite poruku",
   "send_message_to_sender": "Pošaljite Poruku Pošiljaocu",
   "sender": "Pošiljatelj",
+  "sender_address": "Adresa pošiljatelja",
+  "sender_id": "ID pošiljatelja",
   "sender_public_key": "Javni ključ pošiljatelja",
   "server_error_unknown": "Pojavila se nepoznata greška.",
   "set_account_info": "Postavi Info računa",
@@ -790,6 +801,7 @@
   "settings": "Postavke",
   "share_address": "Dijeljene adrese",
   "show_console_log_button": "Prikaži Log gumb konzole",
+  "signature": "Potpis",
   "signature_hash": "Hash potpisa",
   "signed_transaction_bytes": "Potpisana transakcija Bytes",
   "smart_contract": "Smart Contract",
@@ -855,6 +867,7 @@
   "success_group_name_update": "Ime grupe uspješno izmijenjeno.",
   "success_hash_verification": "Preuzeta inačica je provjerena, hash je ispravan. Možete nastaviti s instalacijom.",
   "success_issue_asset": "Asset je kreiran i bit će dostupan uskoro.",
+  "success_lease_balance": "Vaš saldo će biti iznajmljen u 1440 blokova.",
   "success_message_sent": "Vaša poruka je poslana.",
   "success_messages_decrypt": "Poruka(ke) uspješno dekodirana.",
   "success_passphrase_confirmed": "Lozinka uspješno potvrđena, sad ste prijavljeni.",
