--- a/web/angular-wallet/src/locales/sk.json
+++ b/web/angular-wallet/src/locales/sk.json
@@ -49,6 +49,7 @@
   "all_blocks": "Všetky bloky",
   "all_transactions": "Všetky transakcie",
   "amount": "Suma",
+  "amount_nqt": "čiastka",
   "amount_plus_fee": "Suma + poplatok",
   "and_logout": "a odhlásiť sa",
   "animate_forging_indicator": "Animovať indikátor kovania",
@@ -96,6 +97,8 @@
   "block": "Blok",
   "block_details": "Podrobnosti bloku",
   "block_generation_time": "Doba vygenerovania bloku",
+  "block_height": "Výška bloku",
+  "block_id": "ID bloku",
   "block_signature": "Podpis bloku",
   "block_timestamp": "Časová pečiatka bloku",
   "blocks": "Bloky",
@@ -224,6 +227,8 @@
   "downloading_blockchain": "Blockchain sa sťahuje",
   "downloading_update": "Aktualizácia sa práve preberá. Po dokončení budete informovaný.",
   "drop_update": "Po stiahnutí presuňte aktualizáciu klienta (zip súbor) sem, alebo kliknutím vyberte.",
+  "ec_block_height": "Výška bloku EC",
+  "ec_block_id": "ID bloku EC",
   "edit": "Upraviť",
   "effective_balance": "Efektívny zostatok",
   "email_address": "E-mailové adresy",
@@ -441,6 +446,7 @@
   "export_contact": "Export Contacts",
   "failed": "Neúspešne",
   "fee": "Poplatok",
+  "fee_nqt": "poplatok",
   "feedback": "Spätná väzba",
   "feedback_given": "Spätná väzba",
   "feedback_note": "Poznámka spätnej väzby",
@@ -717,7 +723,9 @@
   "recent_transactions_since": "Nedávne transakcie odvtedy",
   "recipient": "Príjemca",
   "recipient_account": "Účet príjemcu",
+  "recipient_address": "Adresa príjemcu",
   "recipient_alias_suggestion": "Ak chcete zadať alias, na začiatok aliasu pripojte znak @.",
+  "recipient_id": "ID príjemcu",
   "recipient_info": "Účet príjemcu má verejný kľúč a zostatok __burst__ BURST.",
   "recipient_malformed": "Účet príjemcu je nesprávny, upravte to prosím.",
   "recipient_malformed_suggestion": "Adresa príjemcu je nesprávna, mali ste na mysli __recipient__ ?",
@@ -750,6 +758,7 @@
   "remove_from_group": "Odstrániť zo skupiny",
   "repeat": "Opakovať",
   "request_burst": "Request BURST",
+  "request_processing_time": "Čas spracovania požiadavky",
   "returning_user_q": "Opätovný používateľ?",
   "reward_recipient": "Príjemca odmeny",
   "same_out": "Same Amount",
@@ -783,6 +792,8 @@
   "send_message_button": "Odoslať správu",
   "send_message_to_sender": "Odoslať správu odosielateľovi",
   "sender": "Odosielateľ",
+  "sender_address": "Adresa odosielateľa",
+  "sender_id": "ID odosielateľa",
   "sender_public_key": "Verejný kľúč odosielateľa",
   "server_error_unknown": "Vyskytla sa neznáma chyba.",
   "set_account_info": "Nastaviť info účtu",
@@ -790,6 +801,7 @@
   "settings": "Nastavenia",
   "share_address": "Zdieľať adresu",
   "show_console_log_button": "Ukázať tlačidlo Log konzoly",
+  "signature": "podpis",
   "signature_hash": "Hash podpisu",
   "signed_transaction_bytes": "Podpísané bajty transakcií",
   "smart_contract": "Inteligentná zmluva",
@@ -855,6 +867,7 @@
   "success_group_name_update": "Názov skupiny úspešne aktualizovaný.",
   "success_hash_verification": "Stiahnutá verzia bola overená, hash je správny. Môžete pokračovať v inštalácii.",
   "success_issue_asset": "Majetok bol vytvorený a bude čoskoro k dispozícii.",
+  "success_lease_balance": "Váš zostatok bude prenajatý v 1440 blokoch.",
   "success_message_sent": "Vaša správa bola odoslaná.",
   "success_messages_decrypt": "Správa(y) bola úspešne dešifrovaná.",
   "success_passphrase_confirmed": "Heslo bolo úspešne overené, teraz ste prihlásení.",
