--- a/web/angular-wallet/src/locales/uk.json
+++ b/web/angular-wallet/src/locales/uk.json
@@ -49,6 +49,7 @@
   "all_blocks": "Всі блоки",
   "all_transactions": "Всі транзакції",
   "amount": "Сума",
+  "amount_nqt": "Сума",
   "amount_plus_fee": "Сума + комісія",
   "and_logout": "і вихід із системи",
   "animate_forging_indicator": "Анімувати індикатор форжинга",
@@ -96,6 +97,8 @@
   "block": "Блок",
   "block_details": "Подробиці Блоку",
   "block_generation_time": "Час генерації Блока",
+  "block_height": "Висота блоку",
+  "block_id": "Ідентифікатор блоку",
   "block_signature": "Підпис Блоку",
   "block_timestamp": "Відмітка часу блоку",
   "blocks": "Блоки",
@@ -224,6 +227,8 @@
   "downloading_blockchain": "Завантаження Blockchain",
   "downloading_update": "Оновлення завантажується. Ви будете проінформовані після завершення.",
   "drop_update": "Перетягніть сюди викачаний клієнт(zip файл) або натисніть для вибору.",
+  "ec_block_height": "Висота блоку ЄС",
+  "ec_block_id": "ID блоку EC",
   "edit": "Редагувати",
   "effective_balance": "Ефективний баланс",
   "email_address": "Адреса електронної пошти",
@@ -441,6 +446,7 @@
   "export_contact": "Експортувати контакти",
   "failed": "Не вдалося",
   "fee": "Комісія",
+  "fee_nqt": "Плата",
   "feedback": "Зворотній зв'язок",
   "feedback_given": "Зворотний зв'язок наданий",
   "feedback_note": "Відгук",
@@ -717,7 +723,9 @@
   "recent_transactions_since": "Останні транзакції з",
   "recipient": "Одержувач",
   "recipient_account": "Акаунт одержувача",
+  "recipient_address": "Адреса отримувача",
   "recipient_alias_suggestion": "Якщо ви хочете ввести альяс, введіть перед ним символ @.",
+  "recipient_id": "ID одержувача",
   "recipient_info": "Рахунок одержувача має відкритий ключ і баланс __burst__ BURST.",
   "recipient_malformed": "Невірний формат облікового запису одержувача, будь ласка виправіть.",
   "recipient_malformed_suggestion": "Адресу одержувача вказано невірно, ви мали на увазі __recipient__ ?",
@@ -750,6 +758,7 @@
   "remove_from_group": "Видалити із групи",
   "repeat": "Повторити",
   "request_burst": "Request BURST",
+  "request_processing_time": "Час обробки запиту",
   "returning_user_q": "Зареєстрований Користувач?",
   "reward_recipient": "Одержувач нагороди",
   "same_out": "Same Amount",
@@ -783,6 +792,8 @@
   "send_message_button": "Надіслати повідомлення",
   "send_message_to_sender": "Відправити повідомлення посилачеві",
   "sender": "Відправник",
+  "sender_address": "Адреса відправника",
+  "sender_id": "ID відправника",
   "sender_public_key": "Відправник відкритого ключа",
   "server_error_unknown": "Сталася невідома помилка.",
   "set_account_info": "Встановити інформацію аккаунта",
@@ -790,6 +801,7 @@
   "settings": "Параметри",
   "share_address": "Поділитися Адресою",
   "show_console_log_button": "Відображати кнопку \"консолі  журналу",
+  "signature": "Підпис",
   "signature_hash": "Хэш Підпису",
   "signed_transaction_bytes": "Підписані байти транзакції",
   "smart_contract": "Розумний контракт",
@@ -855,6 +867,7 @@
   "success_group_name_update": "Ім'я групи успішно оновлене.",
   "success_hash_verification": "Завантажена версія була перевірена, хеш є правильним. Ви можете продовжити інсталяцію.",
   "success_issue_asset": "Актив був створений і буде доступний найближчим часом.",
+  "success_lease_balance": "Ваш баланс буде передано в 1440 блоків.",
   "success_message_sent": "Ваше повідомлення було надіслано.",
   "success_messages_decrypt": "Повідомлення успішно розшифрувано.",
   "success_passphrase_confirmed": "Парольна фраза підтверджена успішно, ви зараз ввійшли до системи.",
