--- a/web/angular-wallet/src/locales/bg.json
+++ b/web/angular-wallet/src/locales/bg.json
@@ -49,6 +49,7 @@
   "all_blocks": "Всички блокове",
   "all_transactions": "Всички сделки",
   "amount": "Сума",
+  "amount_nqt": "Количество",
   "amount_plus_fee": "Сума + Такса",
   "and_logout": "и изход",
   "animate_forging_indicator": "Анимиране индикатора за коване",
@@ -96,6 +97,8 @@
   "block": "Блок",
   "block_details": "Детайли за блока",
   "block_generation_time": "Време за генериране на блок",
+  "block_height": "Височина на блока",
+  "block_id": "ID на блок",
   "block_signature": "Блок подпис",
   "block_timestamp": "Блок времеви маркер",
   "blocks": "Блокове",
@@ -224,6 +227,8 @@
   "downloading_blockchain": "Изтегляне на блокверигата",
   "downloading_update": "Актуализацията се изтегля. Ще бъдете информирани, след като приключи.",
   "drop_update": "Прехвърлете тук обновяването на клиента (zip файл), когато изтеглянето приключи, или щракнете за избор.",
+  "ec_block_height": "Височина на блока на ЕО",
+  "ec_block_id": "Идентификационен номер на блок ЕО",
   "edit": "Редактиране",
   "effective_balance": "Ефективно салдо",
   "email_address": "E-mail адрес",
@@ -441,6 +446,7 @@
   "export_contact": "Експортирай контактите",
   "failed": "Неуспешно",
   "fee": "Такса",
+  "fee_nqt": "Такса",
   "feedback": "Отзиви",
   "feedback_given": "Предоставена обратна информация",
   "feedback_note": "Бележка отзив",
@@ -717,7 +723,9 @@
   "recent_transactions_since": "Последните сделки оттогава",
   "recipient": "Получател",
   "recipient_account": "Сметка на получателя",
+  "recipient_address": "Адрес на получателя",
   "recipient_alias_suggestion": "Ако искате да въведедете псевдоним, добавете знака @ като представка.",
+  "recipient_id": "ID на получателя",
   "recipient_info": "Сметката на получателя има публичен ключ и наличност от __BURST__ BURST.",
   "recipient_malformed": "Сметката на получателя е неправилно форматирана, моля поправете.",
   "recipient_malformed_suggestion": "Адреса на получателя е неправилно форматиран, имате в предвид __recipient__ ?",
@@ -750,6 +758,7 @@
   "remove_from_group": "Премахни от група",
   "repeat": "Повтори",
   "request_burst": "Request BURST",
+  "request_processing_time": "Заявете време за обработка",
   "returning_user_q": "Връщащ се потребител?",
   "reward_recipient": "Награда Получател",
   "same_out": "Same Amount",
@@ -783,6 +792,8 @@
   "send_message_button": "Изпрати съобщение",
   "send_message_to_sender": "Изпрати съобщение на подателя",
   "sender": "Подател",
+  "sender_address": "Адрес на подателя",
+  "sender_id": "ID на подателя",
   "sender_public_key": "Публичен ключ на подателя",
   "server_error_unknown": "Възникна неизвестна грешка.",
   "set_account_info": "Задайте информация за сметка",
@@ -790,6 +801,7 @@
   "settings": "Настройки",
   "share_address": "Сподели адрес",
   "show_console_log_button": "Показване на бутон дневник конзола",
+  "signature": "Подпис",
   "signature_hash": "Подпис хеш",
   "signed_transaction_bytes": "Байта на подписана сделка",
   "smart_contract": "Смарт договор",
@@ -855,6 +867,7 @@
   "success_group_name_update": "Името на групата е актуализирано успешно.",
   "success_hash_verification": "Изтеглената версия е проверена, стойността на хеша е правилна. Можете да продължите с инсталирането.",
   "success_issue_asset": "Активът е създаден и ще бъде достъпен скоро.",
+  "success_lease_balance": "Балансът ви ще бъде отдаден в 1440 блока.",
   "success_message_sent": "Вашето съобщение е изпратено.",
   "success_messages_decrypt": "Съобщението(ята) е дешифрирано успешно.",
   "success_passphrase_confirmed": "Паролата е потвърдена успешно, вече сте в системата.",
