--- a/web/angular-wallet/src/locales/ca.json
+++ b/web/angular-wallet/src/locales/ca.json
@@ -49,6 +49,7 @@
   "all_blocks": "Tots els Blocs",
   "all_transactions": "Totes les transaccions",
   "amount": "Quantitat",
+  "amount_nqt": "Quantitat",
   "amount_plus_fee": "Total + Comisió",
   "and_logout": "i Desconnectar-se",
   "animate_forging_indicator": "Indicador de Forja animat",
@@ -96,6 +97,8 @@
   "block": "Bloc",
   "block_details": "Detalls del Bloc",
   "block_generation_time": "Temps de generació del Bloc",
+  "block_height": "Alçada del bloc",
+  "block_id": "Identificador de bloc",
   "block_signature": "Signatura del Bloc",
   "block_timestamp": "Marca de Temps del Bloc",
   "blocks": "Blocs",
@@ -224,6 +227,8 @@
   "downloading_blockchain": "Descarregant Blockchain",
   "downloading_update": "S’ha descarregat l’actualització. Se l'informarà un cop hagi acabat.",
   "drop_update": "Arrossegui la actualització del client (el arxiu zip) aquí o cliqui per seleccionar.",
+  "ec_block_height": "Alçada del bloc CE",
+  "ec_block_id": "Identificador de bloc CE",
   "edit": "Editar",
   "effective_balance": "Saldo Efectiu",
   "email_address": "Adreça de correu electrònic",
@@ -441,6 +446,7 @@
   "export_contact": "Exportar els contactes",
   "failed": "Error",
   "fee": "Taxa",
+  "fee_nqt": "Taxa",
   "feedback": "Comentaris",
   "feedback_given": "Comentaris enviats",
   "feedback_note": "Comentari",
@@ -717,7 +723,9 @@
   "recent_transactions_since": "Transaccions recents des de",
   "recipient": "Destinatari",
   "recipient_account": "Compte del Destinatari",
+  "recipient_address": "Adreça del destinatari",
   "recipient_alias_suggestion": "Si voleu escriure un àlies, afegiu @ al principi.",
+  "recipient_id": "Identificador del destinatari",
   "recipient_info": "El compte del destinatari té una clau pública i un saldo de __burst__ burst.",
   "recipient_malformed": "El compte del destinatari és incorrecte, si us plau reviseu-lo.",
   "recipient_malformed_suggestion": "L'adreça del destinatari és incorrecte, et refereixes a __recipient__?",
@@ -750,6 +758,7 @@
   "remove_from_group": "Eliminar del Grup",
   "repeat": "Repetir",
   "request_burst": "Request BURST",
+  "request_processing_time": "Temps de processament de sol·licituds",
   "returning_user_q": "Usuari existent?",
   "reward_recipient": "Destinatari de recompensa",
   "same_out": "Same Amount",
@@ -783,6 +792,8 @@
   "send_message_button": "Envia Missatge",
   "send_message_to_sender": "Enviar missatge a l'emissor",
   "sender": "Emissor",
+  "sender_address": "Adreça del remitent",
+  "sender_id": "Identificador del remitent",
   "sender_public_key": "Clau Pública del remitent",
   "server_error_unknown": "S'ha produït un error desconegut.",
   "set_account_info": "Establiu la Informació del Compte",
@@ -790,6 +801,7 @@
   "settings": "Configuració",
   "share_address": "Compartir Adreça",
   "show_console_log_button": "Mostrar el botó per Iniciar la Consola",
+  "signature": "Signatura",
   "signature_hash": "Hash de la Firma",
   "signed_transaction_bytes": "Bytes de la Transacció Firmada",
   "smart_contract": "Contracte intel·ligent",
@@ -855,6 +867,7 @@
   "success_group_name_update": "Nom de Grup actualitzat correctament.",
   "success_hash_verification": "La versió descarregada ha estat verificada, el Hash és correcte. Vostè pot continuar amb la instal·lació.",
   "success_issue_asset": "L'Actiu s'ha creat i aviat estarà disponible.",
+  "success_lease_balance": "El vostre saldo serà arrendat en 1440 blocs.",
   "success_message_sent": "El seu missatge ha estat enviat.",
   "success_messages_decrypt": "Missatge(s) desxifrat(s) correctament.",
   "success_passphrase_confirmed": "Contrasenya confirmada amb èxit, ara estàs connectat.",
