--- a/web/angular-wallet/src/locales/de-de.json
+++ b/web/angular-wallet/src/locales/de-de.json
@@ -49,6 +49,7 @@
   "all_blocks": "Alle Blöcke",
   "all_transactions": "Alle Transaktionen",
   "amount": "Menge",
+  "amount_nqt": "Betrag",
   "amount_plus_fee": "Betrag + Gebühr",
   "and_logout": "und Ausloggen",
   "animate_forging_indicator": "Blockgenerierungsanzeige animieren",
@@ -96,6 +97,8 @@
   "block": "Block",
   "block_details": "Blockdetails",
   "block_generation_time": "Durchschnittliche Blockdauer",
+  "block_height": "Blockhöhe",
+  "block_id": "Block ID",
   "block_signature": "Blocksignatur",
   "block_timestamp": "Blockzeitpunkt",
   "blocks": "Blöcke",
@@ -224,6 +227,8 @@
   "downloading_blockchain": "Blockchain wird heruntergeladen",
   "downloading_update": "Das Update wird heruntergeladen. Sie werden informiert, sobald es fertig ist.",
   "drop_update": "Ziehen Sie die Client-Aktualisierung (Zip-Datei) nach dem Download hierher oder klicken Sie hier, um auszuwählen.",
+  "ec_block_height": "EC-Blockhöhe",
+  "ec_block_id": "EC-Block-ID",
   "edit": "Bearbeiten",
   "effective_balance": "Effektives Guthaben",
   "email_address": "E-Mail-Adresse",
@@ -441,6 +446,7 @@
   "export_contact": "Kontakte exportieren",
   "failed": "Fehlgeschlagen",
   "fee": "Gebühr",
+  "fee_nqt": "Gebühr",
   "feedback": "Feedback",
   "feedback_given": "Feedback abgegeben",
   "feedback_note": "Feedback-Hinweis",
@@ -717,7 +723,9 @@
   "recent_transactions_since": "Letzte Transaktionen seit",
   "recipient": "Empfänger",
   "recipient_account": "Empfängerkonto",
+  "recipient_address": "Empfängeradresse",
   "recipient_alias_suggestion": "Wenn Sie einen Alias eingeben möchten, stellen Sie ein @-Zeichen voran.",
+  "recipient_id": "Empfänger-ID",
   "recipient_info": "Das Empfängerkonto verfügt über einen öffentlichen Schlüssel und ein Guthaben über __burst__ BURST.",
   "recipient_malformed": "Das Empfängerkonto ist ungültig, bitte anpassen.",
   "recipient_malformed_suggestion": "Die Empfängeradresse hat das falsche Format, meinten Sie __recipient__ ?",
@@ -750,6 +758,7 @@
   "remove_from_group": "Aus Gruppe entfernen",
   "repeat": "Wiederholen",
   "request_burst": "Request BURST",
+  "request_processing_time": "Bearbeitungszeit anfordern",
   "returning_user_q": "Konto bereits vorhanden?",
   "reward_recipient": "Belohnungsempfänger",
   "same_out": "Same Amount",
@@ -783,6 +792,8 @@
   "send_message_button": "Nachricht senden",
   "send_message_to_sender": "Nachricht an Absender senden",
   "sender": "Absender",
+  "sender_address": "Absenderadresse",
+  "sender_id": "Absenderidentität",
   "sender_public_key": "Öffentlicher Schlüssel des Absenders",
   "server_error_unknown": "Ein unbekannter Fehler ist aufgetreten.",
   "set_account_info": "Kontoinformationen angeben",
@@ -790,6 +801,7 @@
   "settings": "Einstellungen",
   "share_address": "Adresse weitergeben",
   "show_console_log_button": "Schaltfläche für Konsole anzeigen",
+  "signature": "Unterschrift",
   "signature_hash": "Signaturhash",
   "signed_transaction_bytes": "Signierte Transaktionsbytes",
   "smart_contract": "Smart Contract",
@@ -855,6 +867,7 @@
   "success_group_name_update": "Gruppenname erfolgreich aktualisiert.",
   "success_hash_verification": "Die heruntergeladene Version ist überprüft worden, die Prüfsumme ist korrekt. Sie können mit der Installation fortfahren.",
   "success_issue_asset": "Das Asset wurde erstellt und wird in Kürze verfügbar sein.",
+  "success_lease_balance": "Ihr Guthaben wird in 1440 Blöcken vermietet.",
   "success_message_sent": "Ihre Nachricht wurde gesendet.",
   "success_messages_decrypt": "Nachricht(en) erfolgreich entschlüsselt.",
   "success_passphrase_confirmed": "Die Passphrase wurde bestätigt. Sie sind jetzt eingeloggt.",
