--- a/web/angular-wallet/src/locales/en.json
+++ b/web/angular-wallet/src/locales/en.json
@@ -49,6 +49,7 @@
   "all_blocks": "All Blocks",
   "all_transactions": "All Transactions",
   "amount": "Amount",
+  "amount_nqt": "Amount",
   "amount_plus_fee": "Amount + Fee",
   "and_logout": "and Logout",
   "animate_forging_indicator": "Animate Forging Indicator",
@@ -96,6 +97,8 @@
   "block": "Block",
   "block_details": "Block Details",
   "block_generation_time": "Block Generation Time",
+  "block_height": "Block Height",
+  "block_id": "Block ID",
   "block_signature": "Block Signature",
   "block_timestamp": "Block Timestamp",
   "blocks": "Blocks",
@@ -224,6 +227,8 @@
   "downloading_blockchain": "Downloading Blockchain",
   "downloading_update": "The update is being downloaded. You'll be informed once it finished.",
   "drop_update": "Drop client update (zip file) here when downloaded or click to select.",
+  "ec_block_height": "EC Block Height",
+  "ec_block_id": "EC Block ID",
   "edit": "Edit",
   "effective_balance": "Effective Balance",
   "email_address": "Email Address",
@@ -441,6 +446,7 @@
   "export_contact": "Export Contacts",
   "failed": "Failed",
   "fee": "Fee",
+  "fee_nqt": "Fee",
   "feedback": "Feedback",
   "feedback_given": "Feedback Given",
   "feedback_note": "Feedback Note",
@@ -726,7 +732,9 @@
   "recent_transactions_since": "Recent transactions since",
   "recipient": "Recipient",
   "recipient_account": "Recipient Account",
+  "recipient_address": "Recipient Address",
   "recipient_alias_suggestion": "If you want to type an alias, prepend it with the @ character.",
+  "recipient_id": "Recipient ID",
   "recipient_info": "The recipient account has a public key and a balance of __burst__ BURST.",
   "recipient_malformed": "The recipient account is malformed, please adjust.",
   "recipient_malformed_suggestion": "The recipient address is malformed, did you mean __recipient__ ?",
@@ -759,6 +767,7 @@
   "remove_from_group": "Remove From Group",
   "repeat": "Repeat",
   "request_burst": "Request BURST",
+  "request_processing_time": "Request Processing Time",
   "returning_user_q": "Returning User?",
   "reward_recipient": "Reward Recipient",
   "same_out": "Same Amount",
@@ -792,6 +801,8 @@
   "send_message_button": "Send Message",
   "send_message_to_sender": "Send Message to Sender",
   "sender": "Sender",
+  "sender_address": "Sender Address",
+  "sender_id": "Sender ID",
   "sender_public_key": "Sender Public Key",
   "server_error_unknown": "An unknown error occured.",
   "set_account_info": "Set Account Info",
@@ -799,6 +810,7 @@
   "settings": "Settings",
   "share_address": "Share Address",
   "show_console_log_button": "Show Console Log Button",
+  "signature": "Signature",
   "signature_hash": "Signature Hash",
   "signed_transaction_bytes": "Signed Transaction Bytes",
   "smart_contract": "Smart Contract",
