--- a/web/angular-wallet/src/locales/es-es.json
+++ b/web/angular-wallet/src/locales/es-es.json
@@ -49,6 +49,7 @@
   "all_blocks": "Todos los Bloques",
   "all_transactions": "Todas las Transacciones",
   "amount": "Cantidad",
+  "amount_nqt": "Cantidad",
   "amount_plus_fee": "Cantidad + Tarifa",
   "and_logout": "y Cerrar Sesión",
   "animate_forging_indicator": "Animar Indicador de Forja",
@@ -96,6 +97,8 @@
   "block": "Bloque",
   "block_details": "Detalles del Bloque",
   "block_generation_time": "Hora de Generación del Bloque",
+  "block_height": "Altura del bloque",
+  "block_id": "ID de bloque",
   "block_signature": "Firma del Bloque",
   "block_timestamp": "Marca de Tiempo del Bloque",
   "blocks": "Bloques",
@@ -224,6 +227,8 @@
   "downloading_blockchain": "Descargando Cadena de Bloques",
   "downloading_update": "La actualización se está descargando. Estarás informado una vez que haya terminado.",
   "drop_update": "Arrastre la actualización del cliente (el archivo zip) aquí o haga clic para seleccionar.",
+  "ec_block_height": "Altura del bloque EC",
+  "ec_block_id": "ID de bloque EC",
   "edit": "Editar",
   "effective_balance": "Saldo Efectivo",
   "email_address": "Dirección de Correo electrónico",
@@ -441,6 +446,7 @@
   "export_contact": "Exportar contactos",
   "failed": "Fallo",
   "fee": "Tarifa",
+  "fee_nqt": "Cuota",
   "feedback": "Comentarios",
   "feedback_given": "Valoración Enviada",
   "feedback_note": "Comentario",
@@ -717,7 +723,9 @@
   "recent_transactions_since": "Transacciones recientes desde",
   "recipient": "Destinatario",
   "recipient_account": "Cuenta de Destino",
+  "recipient_address": "Dirección del receptor",
   "recipient_alias_suggestion": "Si desea escribir un alias, añada el caracter @ al principio.",
+  "recipient_id": "ID del destinatario",
   "recipient_info": "La cuenta de destino tiene clave pública y un saldo de __burst__ BURST.",
   "recipient_malformed": "La cuenta del destinatario contiene errores, por favor revísela.",
   "recipient_malformed_suggestion": "La dirección de destino es incorrecta, quizá quiso decir",
@@ -750,6 +758,7 @@
   "remove_from_group": "Quitar del Grupo",
   "repeat": "Repetir",
   "request_burst": "Request BURST",
+  "request_processing_time": "Tiempo de procesamiento de solicitud",
   "returning_user_q": "¿Usuario existente?",
   "reward_recipient": "Recipiente Recompensa",
   "same_out": "Same Amount",
@@ -783,6 +792,8 @@
   "send_message_button": "Enviar un mensaje",
   "send_message_to_sender": "Enviar mensaje al remitente",
   "sender": "Remitente",
+  "sender_address": "Dirección del remitente",
+  "sender_id": "identificación del remitente",
   "sender_public_key": "Clave Pública del Remitente",
   "server_error_unknown": "Se ha producido un error desconocido.",
   "set_account_info": "Establecer la Información de Cuenta",
@@ -790,6 +801,7 @@
   "settings": "Configuración",
   "share_address": "Compartir Dirección",
   "show_console_log_button": "Mostrar Botón de Registro de Consola",
+  "signature": "Firma",
   "signature_hash": "Hash de la Firma",
   "signed_transaction_bytes": "Bytes de la Transacción Firmada",
   "smart_contract": "Contrato inteligente",
@@ -855,6 +867,7 @@
   "success_group_name_update": "Nombre de Grupo actualizado con éxito.",
   "success_hash_verification": "La versión descargada se ha verificado, el hash es correcto. Puede continuar con la instalación.",
   "success_issue_asset": "El activo ha sido creado y estará disponible pronto.",
+  "success_lease_balance": "Su saldo será arrendado en 1440 bloques.",
   "success_message_sent": "Su mensaje ha sido enviado.",
   "success_messages_decrypt": "Mensaje(s) descifrados con éxito.",
   "success_passphrase_confirmed": "Contraseña confirmada con éxito, ha iniciado su sesión.",
