--- a/web/angular-wallet/src/locales/hi.json
+++ b/web/angular-wallet/src/locales/hi.json
@@ -49,6 +49,7 @@
   "all_blocks": "सभी ब्लाक",
   "all_transactions": "All Transactions",
   "amount": "राशि",
+  "amount_nqt": "रकम",
   "amount_plus_fee": "राशि + फीस",
   "and_logout": "और लॉगआउट",
   "animate_forging_indicator": "सूचक फोर्जिंग ऐनिमेट करें",
@@ -96,6 +97,8 @@
   "block": "ब्लॉक",
   "block_details": "ब्लॉक विवरण",
   "block_generation_time": "ब्लॉक उत्पादन समय",
+  "block_height": "ब्लॉक ऊंचाई",
+  "block_id": "ब्लॉक आईडी",
   "block_signature": "Block Signature",
   "block_timestamp": "Block Timestamp",
   "blocks": "ब्लॉक",
@@ -224,6 +227,8 @@
   "downloading_blockchain": "Blockchain डाउनलोड हो रही है",
   "downloading_update": "अपडेट डाउनलोड किया जा रहा है। समाप्त होने के बाद आपको सूचित किया जाएगा।",
   "drop_update": "जब क्लाइंट अपडेट (zip फाइल) डाउनलोड हो जाये तो उसे यहां छोड़ें यां चयन करने के लिए क्लिक करें।",
+  "ec_block_height": "ईसी ब्लॉक ऊंचाई",
+  "ec_block_id": "ईसी ब्लॉक आईडी",
   "edit": "संपादित करें",
   "effective_balance": "प्रभावी शेष",
   "email_address": "ईमेल पता",
@@ -441,6 +446,7 @@
   "export_contact": "संपर्क निर्यात करें",
   "failed": "में असफल रहा",
   "fee": "फीस",
+  "fee_nqt": "शुल्क",
   "feedback": "आपके सुझाव",
   "feedback_given": "प्रतिक्रिया दी",
   "feedback_note": "Feedback Note",
@@ -717,7 +723,9 @@
   "recent_transactions_since": "हाल ही में लेन-देन",
   "recipient": "प्राप्तकर्ता",
   "recipient_account": "प्राप्तकर्ता खाता",
+  "recipient_address": "प्राप्तकर्ता का पता",
   "recipient_alias_suggestion": "If you want to type an alias, prepend it with the @ character.",
+  "recipient_id": "प्राप्तकर्ता आईडी",
   "recipient_info": "The recipient account has a public key and a balance of __burst__ BURST.",
   "recipient_malformed": "कृपया समायोजित करें, प्राप्तकर्ता खाते विकृत है।",
   "recipient_malformed_suggestion": "प्राप्तकर्ता का पता ग़लत बना हुआ है, क्या आपका मतलब है __recipient__ ?",
@@ -750,6 +758,7 @@
   "remove_from_group": "समूह से निकालें",
   "repeat": "दोहराएँ",
   "request_burst": "Request BURST",
+  "request_processing_time": "प्रसंस्करण समय का अनुरोध करें",
   "returning_user_q": "वापिस आये उपयोगकर्ता (यूजर)?",
   "reward_recipient": "इनाम देने वाला",
   "same_out": "Same Amount",
@@ -783,6 +792,8 @@
   "send_message_button": "संदेश भेजें",
   "send_message_to_sender": "भेजनेवाले को संदेश भेजें",
   "sender": "भेजनेवाला",
+  "sender_address": "भेजने वाले का पता",
+  "sender_id": "प्रेषक आईडी",
   "sender_public_key": "Sender Public Key",
   "server_error_unknown": "कोई अज्ञात त्रुटि उत्पन्न हुई।",
   "set_account_info": "खाता जानकारी भरें",
@@ -790,6 +801,7 @@
   "settings": "सेटिंग्स",
   "share_address": "Share Address",
   "show_console_log_button": "कंसोल लॉग बटन दिखाएँ",
+  "signature": "हस्ताक्षर",
   "signature_hash": "हस्ताक्षर हैश",
   "signed_transaction_bytes": "हस्ताक्षरित लेनदेन बाइट्स",
   "smart_contract": "स्मार्ट कॉन्ट्रैक्ट",
@@ -855,6 +867,7 @@
   "success_group_name_update": "Group name updated successfully.",
   "success_hash_verification": "The downloaded version has been verified, the hash is correct. You may proceed with the installation.",
   "success_issue_asset": "The asset has been created and will be available soon.",
+  "success_lease_balance": "आपका शेष 1440 ब्लॉकों में पट्टे पर दिया जाएगा।",
   "success_message_sent": "आपका संदेश भेजा जा चूका है।",
   "success_messages_decrypt": "संदेश सफलतापूर्वक डिक्रिप्ट हो गए।",
   "success_passphrase_confirmed": "Passphrase confirmed successfully, you are now logged in.",
