--- a/web/angular-wallet/src/locales/it.json
+++ b/web/angular-wallet/src/locales/it.json
@@ -49,6 +49,7 @@
   "all_blocks": "Tutti i blocchi",
   "all_transactions": "Tutte le traduzioni",
   "amount": "Ammontare",
+  "amount_nqt": "Quantità",
   "amount_plus_fee": "Importo + commissione",
   "and_logout": "ed uscire",
   "animate_forging_indicator": "Animare l'indicatore di forgiatura",
@@ -96,6 +97,8 @@
   "block": "Blocco",
   "block_details": "Dettagli blocco",
   "block_generation_time": "Tempo generazione blocco",
+  "block_height": "Block Height",
+  "block_id": "ID blocco",
   "block_signature": "Firma del blocco",
   "block_timestamp": "Timestamp Blocco",
   "blocks": "Blocchi",
@@ -224,6 +227,8 @@
   "downloading_blockchain": "Download Blockchain",
   "downloading_update": "L'aggiornamento è in fase di download. Sarai informato una volta finito.",
   "drop_update": "Quando scaricato, trascina qui l'aggiornamento del client (file zip) o clicca per selezionare.",
+  "ec_block_height": "Altezza del blocco CE",
+  "ec_block_id": "ID blocco CE",
   "edit": "Modifica",
   "effective_balance": "Saldo effettivo",
   "email_address": "Indirizzo email",
@@ -441,6 +446,7 @@
   "export_contact": "Export Contacts",
   "failed": "Fallito",
   "fee": "Commissione",
+  "fee_nqt": "tassa",
   "feedback": "Feedback",
   "feedback_given": "Feedback inviato",
   "feedback_note": "Feedback",
@@ -717,7 +723,9 @@
   "recent_transactions_since": "Transazioni recenti da",
   "recipient": "Destinatario",
   "recipient_account": "Account del destinatario",
+  "recipient_address": "Indirizzo del destinatario",
   "recipient_alias_suggestion": "Se desideri digitare un alias, anteponi il carattere @.",
+  "recipient_id": "ID destinatario",
   "recipient_info": "L'account del destinatario ha una chiave pubblica ed un saldo di __burst__ BURST.",
   "recipient_malformed": "L'account del destinatario non è corretto, si prega di controllare.",
   "recipient_malformed_suggestion": "L'indirizzo del destinatario non è corretto, forse intendevi __recipient__?",
@@ -750,6 +758,7 @@
   "remove_from_group": "Rimuovi dal gruppo",
   "repeat": "Ripeti",
   "request_burst": "Request BURST",
+  "request_processing_time": "Richiedi tempo di elaborazione",
   "returning_user_q": "Utente già registrato?",
   "reward_recipient": "Ricompensa",
   "same_out": "Same Amount",
@@ -783,6 +792,8 @@
   "send_message_button": "Invia messaggio",
   "send_message_to_sender": "Send Message to Sender",
   "sender": "Mittente",
+  "sender_address": "Indirizzo mittente",
+  "sender_id": "identità del mittente",
   "sender_public_key": "Chiave pubblica del mittente",
   "server_error_unknown": "Ci scusi. C'è stato un errore.",
   "set_account_info": "Impostare Info Account",
@@ -790,6 +801,7 @@
   "settings": "Impostazioni",
   "share_address": "Condividi indirizzo",
   "show_console_log_button": "Visualizza il pulsante Log Console",
+  "signature": "Firma",
   "signature_hash": "Hash della firma",
   "signed_transaction_bytes": "Bytes di transazione firmata",
   "smart_contract": "Contratto intelligente",
@@ -855,6 +867,7 @@
   "success_group_name_update": "Nome gruppo aggiornato con successo.",
   "success_hash_verification": "La versione scaricata è stata verificata, l'hash è corretto. Si può procedere con l'installazione.",
   "success_issue_asset": "L'asset è stato creato e sarà disponibile a breve.",
+  "success_lease_balance": "Il tuo saldo verrà affittato in 1440 blocchi.",
   "success_message_sent": "Il tuo messaggio è stato inviato.",
   "success_messages_decrypt": "Messaggio(i) decriptati con successo.",
   "success_passphrase_confirmed": "Passphrase confermata con successo, ora sei connesso.",
