--- a/web/angular-wallet/src/locales/ja.json
+++ b/web/angular-wallet/src/locales/ja.json
@@ -49,6 +49,7 @@
   "all_blocks": "全てのブロック",
   "all_transactions": "全てのトランザクション",
   "amount": "量",
+  "amount_nqt": "量",
   "amount_plus_fee": "金額 + 手数料",
   "and_logout": "そしてログアウト",
   "animate_forging_indicator": "鋳造のインジケーターをアニメーション化",
@@ -96,6 +97,8 @@
   "block": "ブロック",
   "block_details": "ブロックの詳細",
   "block_generation_time": "ブロックの生成時間",
+  "block_height": "ブロックの高さ",
+  "block_id": "ブロックID",
   "block_signature": "ブロックの署名",
   "block_timestamp": "ブロックのタイムスタンプ",
   "blocks": "ブロック",
@@ -224,6 +227,8 @@
   "downloading_blockchain": "ブロックチェーンをダウンロード中",
   "downloading_update": "更新プログラムをダウンロード中です。それが終わったらあなたは知らされるでしょう。",
   "drop_update": "クライアントのアップデート（zipファイル）をダウンロードしたら、ここにドロップするか、クリックして選択してください。",
+  "ec_block_height": "ECブロックの高さ",
+  "ec_block_id": "ECブロックID",
   "edit": "編集",
   "effective_balance": "有効残高",
   "email_address": "メールアドレス",
@@ -441,6 +446,7 @@
   "export_contact": "Export Contacts",
   "failed": "失敗",
   "fee": "料金",
+  "fee_nqt": "費用",
   "feedback": "フィードバック",
   "feedback_given": "与えられたフィードバック",
   "feedback_note": "フィードバックのメモ ",
@@ -717,7 +723,9 @@
   "recent_transactions_since": "最近の取引以降",
   "recipient": "受信者",
   "recipient_account": "受信者のアカウント",
+  "recipient_address": "受取人アドレス",
   "recipient_alias_suggestion": "エイリアスを入力する場合は、先頭に@ 文字を付けてください。",
+  "recipient_id": "受信者ID",
   "recipient_info": "受信者のアカウントには公開キーがあり、残高は__burst__ BURSTです。",
   "recipient_malformed": "受信者のアカウントが間違っていますので、訂正してください。",
   "recipient_malformed_suggestion": "受信者のアドレスが正しくありません。__recipient__のことですか。",
@@ -750,6 +758,7 @@
   "remove_from_group": "グループから削除",
   "repeat": "リピート",
   "request_burst": "Request BURST",
+  "request_processing_time": "リクエスト処理時間",
   "returning_user_q": "以前ご利用になられたユーザーですか",
   "reward_recipient": "報酬受取人",
   "same_out": "Same Amount",
@@ -783,6 +792,8 @@
   "send_message_button": "メッセージを送信",
   "send_message_to_sender": "Send Message to Sender",
   "sender": "送信元",
+  "sender_address": "送信者アドレス",
+  "sender_id": "送信者ID",
   "sender_public_key": "送信者の公開キー",
   "server_error_unknown": "不明なエラーが発生しました。",
   "set_account_info": "アカウント情報を設定",
@@ -790,6 +801,7 @@
   "settings": "設定",
   "share_address": "アドレスを共有",
   "show_console_log_button": "コンソールのログボタンを表示",
+  "signature": "署名",
   "signature_hash": "署名のハッシュ",
   "signed_transaction_bytes": "署名されたトランザクションのバイト",
   "smart_contract": "スマート契約",
@@ -855,6 +867,7 @@
   "success_group_name_update": "グループ名が更新されました。",
   "success_hash_verification": "ハッシュが正しかったので、ダウンロードしたバージョンが正しいことが確認されました。インストールを続行できます。",
   "success_issue_asset": "資産は作成されました。まもなく利用できます。",
+  "success_lease_balance": "あなたの残高は1440ブロックでリースアウトされます。",
   "success_message_sent": "あなたのメッセージが送信されました。",
   "success_messages_decrypt": "メッセージが復号化されました。",
   "success_passphrase_confirmed": "パスフレーズが正常に確認されました。現在ログインしています。",
