--- a/web/angular-wallet/src/locales/nl.json
+++ b/web/angular-wallet/src/locales/nl.json
@@ -49,6 +49,7 @@
   "all_blocks": "Alle Blokken",
   "all_transactions": "Alle Transacties",
   "amount": "Bedrag",
+  "amount_nqt": "Bedrag",
   "amount_plus_fee": "Bedrag + kosten",
   "and_logout": "en Uitloggen",
   "animate_forging_indicator": "Animatie smeden Indicator",
@@ -96,6 +97,8 @@
   "block": "Blok",
   "block_details": "Blok Details",
   "block_generation_time": "Generatietijd blokken",
+  "block_height": "Blokhoogte",
+  "block_id": "ID blokkeren",
   "block_signature": "Blok handtekening",
   "block_timestamp": "Blok Timestamp",
   "blocks": "Blokken",
@@ -224,6 +227,8 @@
   "downloading_blockchain": "Blockchain aan het downloaden",
   "downloading_update": "De update wordt gedownload. Je wordt op de hoogte gesteld zodra het is afgelopen.",
   "drop_update": "Plaats de client update (zip-bestand) hier wanneer het gedownload is of klik om te selecteren.",
+  "ec_block_height": "EC-blokhoogte",
+  "ec_block_id": "EC-blok-ID",
   "edit": "Bewerken",
   "effective_balance": "Effectieve saldo",
   "email_address": "E-mailadres",
@@ -441,6 +446,7 @@
   "export_contact": "Exporteer Contacten",
   "failed": "Mislukt",
   "fee": "Vergoeding",
+  "fee_nqt": "honorarium",
   "feedback": "Feedback",
   "feedback_given": "Feedback gegeven",
   "feedback_note": "Opmerking",
@@ -717,7 +723,9 @@
   "recent_transactions_since": "Recente transacties sinds",
   "recipient": "Ontvanger",
   "recipient_account": "Ontvangend Rekening",
+  "recipient_address": "Geadresseerde adres",
   "recipient_alias_suggestion": "Als je een Alias wilt intypen begin dan door eerst een \"@\" teken in te voeren.",
+  "recipient_id": "Ontvanger ID",
   "recipient_info": "De ontvangende account heeft een openbare sleutel en een balans van __burst__ BURST.",
   "recipient_malformed": "Het adres van de ontvangende account is ongeldig, pas het a.u.b. aan.",
   "recipient_malformed_suggestion": "Het adres van de ontvanger is niet geldig, bedoelt u __recipient__ ?",
@@ -750,6 +758,7 @@
   "remove_from_group": "Verwijderen uit groep",
   "repeat": "Herhaal",
   "request_burst": "Request BURST",
+  "request_processing_time": "Verzoek om verwerkingstijd",
   "returning_user_q": "Terugkerende Gebruiker?",
   "reward_recipient": "Beloning Ontvanger",
   "same_out": "Same Amount",
@@ -783,6 +792,8 @@
   "send_message_button": "Verstuur een bericht",
   "send_message_to_sender": "Stuur bericht naar de afzender",
   "sender": "Zender",
+  "sender_address": "Zender adres",
+  "sender_id": "zender ID",
   "sender_public_key": "Openbare sleutel van de afzender",
   "server_error_unknown": "Er is een onbekende fout opgetreden.",
   "set_account_info": "Accountgegevens instellen",
@@ -790,6 +801,7 @@
   "settings": "Instellingen",
   "share_address": "Deel Adres",
   "show_console_log_button": "Console Log knop weergeven",
+  "signature": "Handtekening",
   "signature_hash": "Handtekening Hash",
   "signed_transaction_bytes": "Ondertekende transactie Bytes",
   "smart_contract": "Slim contract",
@@ -855,6 +867,7 @@
   "success_group_name_update": "Groepsnaam is bijgewerkt.",
   "success_hash_verification": "De gedownloade versie is geverifieerd, de hash is correct. U kunt doorgaan met het installatieproces.",
   "success_issue_asset": "De asset is gemaakt en zal binnenkort beschikbaar zijn.",
+  "success_lease_balance": "Uw saldo wordt verhuurd in 1440 blokken.",
   "success_message_sent": "Uw bericht is verstuurd.",
   "success_messages_decrypt": "Bericht(en) met succes gedecodeerd.",
   "success_passphrase_confirmed": "Wachtwoord/Passphrase met succes bevestigd, U bent nu ingelogd.",
