--- a/web/angular-wallet/src/locales/pl.json
+++ b/web/angular-wallet/src/locales/pl.json
@@ -49,6 +49,7 @@
   "all_blocks": "Wszystkie bloki",
   "all_transactions": "Wszystkie transakcje",
   "amount": "Kwota",
+  "amount_nqt": "Ilość",
   "amount_plus_fee": "Kwota + koszt",
   "and_logout": "i wyloguj",
   "animate_forging_indicator": "Animuj indykator forgingu",
@@ -96,6 +97,8 @@
   "block": "Blok",
   "block_details": "Szczegóły bloku",
   "block_generation_time": "Czas wynegerowania bloku",
+  "block_height": "Wysokość bloku",
+  "block_id": "ID bloku",
   "block_signature": "Sygnatura bloku",
   "block_timestamp": "Timestamp bloku",
   "blocks": "Bloki",
@@ -224,6 +227,8 @@
   "downloading_blockchain": "Pobieram blockchain",
   "downloading_update": "Aktualizacja jest pobierana. Zostaniesz poinformowany po zakończeniu.",
   "drop_update": "Dodaj plik zip programu tutaj lub wybierz klikając.",
+  "ec_block_height": "Wysokość bloku EC",
+  "ec_block_id": "Identyfikator bloku EC",
   "edit": "Edytuj",
   "effective_balance": "Efektywny balans",
   "email_address": "Adres email",
@@ -441,6 +446,7 @@
   "export_contact": "Eksport kontaktów",
   "failed": "Nie udało się",
   "fee": "Koszt",
+  "fee_nqt": "Opłata",
   "feedback": "Informacja zwrotna",
   "feedback_given": "Informacje zwrotne",
   "feedback_note": "Notatka o informacji zwrotnej",
@@ -726,7 +732,9 @@
   "recent_transactions_since": "Ostatnie transakcje od",
   "recipient": "Odbiorca",
   "recipient_account": "Konto odbiorcy",
+  "recipient_address": "Adres odbiorcy",
   "recipient_alias_suggestion": "Alias musi być poprzedzony znakiem @.",
+  "recipient_id": "ID odbiorcy",
   "recipient_info": "Konto odbiorcy posiada klucz publiczny i balans równy __burst__ BURST.",
   "recipient_malformed": "Konto odbiorcy nie jest poprawne.",
   "recipient_malformed_suggestion": "Adres odbiorcy nie jest poprawny, czy miałeś na myśli __recipient__ ?",
@@ -759,6 +767,7 @@
   "remove_from_group": "Usuń z grupy",
   "repeat": "Powtórz",
   "request_burst": "Request BURST",
+  "request_processing_time": "Żądaj czasu przetwarzania",
   "returning_user_q": "Powracający użytkownik?",
   "reward_recipient": "Odbiorca nagrody",
   "same_out": "Ta sama ilość",
@@ -792,6 +801,8 @@
   "send_message_button": "Wyślij wiadomość",
   "send_message_to_sender": "Wyślij wiadomość do nadawcy",
   "sender": "Nadawca",
+  "sender_address": "Adres nadawcy",
+  "sender_id": "ID nadawcy",
   "sender_public_key": "Klucz publiczny nadawcy",
   "server_error_unknown": "Wystąpił nieznany błąd.",
   "set_account_info": "Ustaw informacje o koncie",
@@ -799,6 +810,7 @@
   "settings": "Ustawienia",
   "share_address": "Udostępnij adres",
   "show_console_log_button": "Pokaż przycisk do wyświetlenia konsoli",
+  "signature": "Podpis",
   "signature_hash": "Hash podpisu",
   "signed_transaction_bytes": "Bajty podpisanej transakci",
   "smart_contract": "Inteligentna umowa",
@@ -864,7 +876,7 @@
   "success_group_name_update": "Nazwa grupy została zmieniona.",
   "success_hash_verification": "Pobrana wersja została pomyślnie zweryfikowana. Hash jest prawidłowy. Możesz kontynuować instalację.",
   "success_issue_asset": "Aktywo zostało utworzone i będzie wkrótce dostępne.",
-  "success_lease_balance": "Twój balans będzie wyleasingowany za 1440 bloków.",
+  "success_lease_balance": "Twoje saldo zostanie wydzierżawione w 1440 blokach.",
   "success_message_sent": "Wiadomość została wysłana.",
   "success_messages_decrypt": "Wiadomość(i) zostały pomyślnie odszyfrowane.",
   "success_passphrase_confirmed": "Hasło poprawne! Jesteś zalogowany.",
