--- a/web/angular-wallet/src/locales/ru.json
+++ b/web/angular-wallet/src/locales/ru.json
@@ -49,6 +49,7 @@
   "all_blocks": "Все Блоки",
   "all_transactions": "Все Транзакции",
   "amount": "Количество",
+  "amount_nqt": "Количество",
   "amount_plus_fee": "Сумма + Комиссия",
   "and_logout": "и выйти",
   "animate_forging_indicator": "Анимировать индикатор форжинга",
@@ -96,6 +97,8 @@
   "block": "Блок",
   "block_details": "Детали блока",
   "block_generation_time": "Время генерации блока",
+  "block_height": "Высота блока",
+  "block_id": "Блок ID",
   "block_signature": "Подпись блока",
   "block_timestamp": "Отметка времени блока",
   "blocks": "Блоки",
@@ -224,6 +227,8 @@
   "downloading_blockchain": "Загрузка блокчейн",
   "downloading_update": "Обновление загружается. Вы будете проинформированы, как только это закончится.",
   "drop_update": "Перетащите сюда скачанный клиент (zip файл) или нажмите для выбора.",
+  "ec_block_height": "Высота блока ЕС",
+  "ec_block_id": "EC Block ID",
   "edit": "Редактировать",
   "effective_balance": "Эффективный баланс",
   "email_address": "Адрес электронной почты",
@@ -441,6 +446,7 @@
   "export_contact": "Export Contacts",
   "failed": "Не удалось",
   "fee": "Комиссия",
+  "fee_nqt": "плата",
   "feedback": "Обратная связь",
   "feedback_given": "Обратная связь предоставлена",
   "feedback_note": "Отзыв",
@@ -717,7 +723,9 @@
   "recent_transactions_since": "Последние транзакции с",
   "recipient": "Получатель",
   "recipient_account": "Счет получателя",
+  "recipient_address": "Адрес получателя",
   "recipient_alias_suggestion": "Если вы хотите ввести псевдоним, введите перед ним символ @.",
+  "recipient_id": "Идентификатор получателя",
   "recipient_info": "Счет получателя имеет открытый ключ и баланс __burst__ BURST.",
   "recipient_malformed": "Неверный формат учетной записи получателя, пожалуйста исправьте.",
   "recipient_malformed_suggestion": "Неверный адрес получателя, возможно вы имели в виду __recipient__?",
@@ -750,6 +758,7 @@
   "remove_from_group": "Удалить из группы",
   "repeat": "Повторить",
   "request_burst": "Request BURST",
+  "request_processing_time": "Время обработки запроса",
   "returning_user_q": "Зарегистрированный пользователь?",
   "reward_recipient": "Получатель вознаграждения",
   "same_out": "Same Amount",
@@ -783,6 +792,8 @@
   "send_message_button": "Отправить сообщение",
   "send_message_to_sender": "Отправить сообщение отправителю",
   "sender": "Отправитель",
+  "sender_address": "Адрес отправителя",
+  "sender_id": "Удостоверение личности отправителя",
   "sender_public_key": "Открытый ключ отправителя",
   "server_error_unknown": "Произошла неизвестная ошибка.",
   "set_account_info": "Установить информацию аккаунта",
@@ -790,6 +801,7 @@
   "settings": "Настройки",
   "share_address": "Поделиться Адресом",
   "show_console_log_button": "Показать кнопку Журнал консоли",
+  "signature": "Подпись",
   "signature_hash": "Хэш Подписи",
   "signed_transaction_bytes": "Подписанные байты транзакции",
   "smart_contract": "Смарт Контракт",
@@ -855,6 +867,7 @@
   "success_group_name_update": "Имя группы успешно обновлено.",
   "success_hash_verification": "Скачанная версия была проверена, хэш-код является правильным. Вы можете продолжить установку.",
   "success_issue_asset": "Актив был создан и будет доступен в ближайшее время.",
+  "success_lease_balance": "Ваш баланс будет сдан в аренду в 1440 блоках.",
   "success_message_sent": "Ваше сообщение было отправлено.",
   "success_messages_decrypt": "Сообщение(я) успешно расшифровано(ы).",
   "success_passphrase_confirmed": "Парольная фраза подтверждена успешно, теперь вы вошли в систему.",
