--- a/web/angular-wallet/src/locales/sr.json
+++ b/web/angular-wallet/src/locales/sr.json
@@ -49,6 +49,7 @@
   "all_blocks": "Сви Блокови",
   "all_transactions": "Све Трансакције",
   "amount": "Количина",
+  "amount_nqt": "Износ",
   "amount_plus_fee": "Износ + Провизија",
   "and_logout": "и одјавите се",
   "animate_forging_indicator": "Активирајте Индикатор Ковања",
@@ -96,6 +97,8 @@
   "block": "Блок",
   "block_details": "Детаљи Блока",
   "block_generation_time": "Време генерисања блока",
+  "block_height": "Блоцк Хеигхт",
+  "block_id": "ИД блока",
   "block_signature": "Потпис Блока",
   "block_timestamp": "Временски Печат Блока",
   "blocks": "Блокови",
@@ -224,6 +227,8 @@
   "downloading_blockchain": "Блоцкцхаин се Преузима",
   "downloading_update": "Ажурирање се преузима. Бићеш обавештен када заврши.",
   "drop_update": "Спустите ажурирани клијент (зип фајл) овде када се заврши преузимање или кликните овде да бисте изабрали.",
+  "ec_block_height": "ЕЦ Блоцк Хеигхт",
+  "ec_block_id": "ЕЦ Блоцк ИД",
   "edit": "Уредите",
   "effective_balance": "Ефективни Салдо",
   "email_address": "Е-маил Адреса",
@@ -441,6 +446,7 @@
   "export_contact": "Export Contacts",
   "failed": "Није успело",
   "fee": "Провизија",
+  "fee_nqt": "Фее",
   "feedback": "Повратне информације",
   "feedback_given": "Повратна Информација је Остављена",
   "feedback_note": "Порука Повратне Информације",
@@ -717,7 +723,9 @@
   "recent_transactions_since": "Недавне трансакције од",
   "recipient": "Прималац",
   "recipient_account": "Налог Примаоца",
+  "recipient_address": "Прималац адреса",
   "recipient_alias_suggestion": "Ако желите да куцате алиас, испред алиас-а куцајте @ карактер.",
+  "recipient_id": "ИД примаоца",
   "recipient_info": "Налог примаоца поседује јавни кључ и салдо од __burst__ BURST.",
   "recipient_malformed": "Налог примаоца је погрешан, молимо исправите унос.",
   "recipient_malformed_suggestion": "Адреса примаоца је неправилна, јесте ли мислили __recipient__ ?",
@@ -750,6 +758,7 @@
   "remove_from_group": "Избришите из Групе",
   "repeat": "Поновите",
   "request_burst": "Request BURST",
+  "request_processing_time": "Рекуест Процессинг Тиме",
   "returning_user_q": "Корисник Повратник?",
   "reward_recipient": "Ревард Реципиент",
   "same_out": "Same Amount",
@@ -783,6 +792,8 @@
   "send_message_button": "Пошаљите Поруку",
   "send_message_to_sender": "Пошаљите Поруку Пошиљаоцу",
   "sender": "Пошиљалац",
+  "sender_address": "Адреса пошиљатеља",
+  "sender_id": "ИД пошиљаоца",
   "sender_public_key": "Јавни Кључ Пошиљаоца",
   "server_error_unknown": "Појавила се непозната грешка.",
   "set_account_info": "Поставите Информације Налога",
@@ -790,6 +801,7 @@
   "settings": "Подешавања",
   "share_address": "Подели Адресу",
   "show_console_log_button": "Прикажи Лог Дугме Конзоле",
+  "signature": "Потпис",
   "signature_hash": "Hash Потпис",
   "signed_transaction_bytes": "Потписана Трансакција Bytes",
   "smart_contract": "Смарт Цонтрацт",
@@ -855,6 +867,7 @@
   "success_group_name_update": "Име групе успешно измењено.",
   "success_hash_verification": "Преузета верзија је проверена, hash је исправан. Можете наставити с инсталацијом.",
   "success_issue_asset": "Ассет је успешно креиран и биће ускоро доступан.",
+  "success_lease_balance": "Ваш салдо ће бити изнајмљен у 1440 блокова.",
   "success_message_sent": "Ваша порука је послана.",
   "success_messages_decrypt": "Порука(ке) успешно дешифрована.",
   "success_passphrase_confirmed": "Лозинка је тачна, успешно сте ушли у свој налог.",
